--- a/resources/locale/en.json
+++ b/resources/locale/en.json
@@ -70,7 +70,7 @@
     "gui_settings_control_port_label": "Control port",
     "gui_settings_socket_file_label": "Socket file",
     "gui_settings_authenticate_label": "Tor authentication options",
-    "gui_settings_authenticate_no_auth_option": "No authentication",
+    "gui_settings_authenticate_no_auth_option": "No authentication, or cookie authentication",
     "gui_settings_authenticate_password_option": "Password",
     "gui_settings_authenticate_cookie_option": "Cookie",
     "gui_settings_password_label": "Password",
@@ -78,5 +78,10 @@
     "gui_settings_button_test": "Test Settings",
     "gui_settings_button_save": "Save",
     "gui_settings_button_cancel": "Cancel",
-    "settings_saved": "Settings saved to {}"
+    "settings_saved": "Settings saved to {}",
+    "settings_error_unknown": "Can't connect to Tor controller because the settings don't make sense.",
+    "settings_error_socket_port": "Can't connect to Tor controller on address {} with port {}.",
+    "settings_error_socket_file": "Can't connect to Tor controller using socket file {}.",
+    "settings_error_missing_password": "Connected to Tor controller, but it requires a password to authenticate.",
+    "settings_error_unreadable_cookie_file": "Connected to Tor controller, but can't authenticate because your password may be wrong, and your user doesn't have permission to read the cookie file."
 }
