--- a/resources/locale/en.json
+++ b/resources/locale/en.json
@@ -11,7 +11,7 @@
     "not_a_file": "{0:s} is not a file.",
     "download_page_loaded": "Download page loaded",
     "other_page_loaded": "URL loaded",
-    "close_on_finish": "Stop sharing automatically",
+    "close_on_finish": "Stop After First Download",
     "closing_automatically": "Closing automatically because download finished",
     "large_filesize": "Warning: Sending large files could take hours",
     "error_tails_invalid_port": "Invalid value, port must be an integer",
@@ -53,8 +53,8 @@
     "error_rate_limit": "An attacker might be trying to guess your URL. To prevent this, OnionShare has automatically stopped the server. To share the files you must start it again and share the new URL.",
     "zip_progress_bar_format": "Crunching files: %p%",
     "error_stealth_not_supported": "To create stealth onion services, you need at least Tor 0.2.9.1-alpha (or Tor Browser 6.5) and at least python3-stem 1.5.0.",
-    "gui_advanced_options": "Advanced options",
-    "gui_create_stealth": "Create stealth onion service",
+    "gui_advanced_options": "Advanced Options",
+    "gui_create_stealth": "Create Stealth Onion Service",
     "gui_menu_file_menu": "&File",
     "gui_menu_settings_action": "&Settings",
     "gui_menu_quit_action": "&Quit",
