--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -59,6 +59,11 @@
     "gui_menu_settings_action": "&Settings",
     "gui_menu_quit_action": "&Quit",
     "gui_settings_window_title": "Settings",
+    "gui_settings_stealth_label": "Stealth (advanced)",
+    "gui_settings_stealth_option": "Create stealth onion services",
+    "gui_settings_stealth_option_details": "This makes OnionShare more secure, but also more difficult for the recipient to connect to it.<br><a href=\"https://github.com/micahflee/onionshare/wiki/Stealth-Onion-Services\">More information</a>.",
+    "gui_settings_sharing_label": "Sharing options",
+    "gui_settings_close_after_first_download_option": "Stop sharing after first download",
     "gui_settings_connection_type_label": "How should OnionShare connect to Tor?",
     "gui_settings_connection_type_automatic_option": "Attempt automatic configuration with Tor Browser",
     "gui_settings_connection_type_control_port_option": "Connect using control port",
