--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -59,6 +59,11 @@
     "gui_settings_stealth_label": "Stealth (advanced)",
     "gui_settings_stealth_option": "Create stealth onion services",
     "gui_settings_stealth_option_details": "This makes OnionShare more secure, but also more difficult for the recipient to connect to it.<br><a href=\"https://github.com/micahflee/onionshare/wiki/Stealth-Onion-Services\">More information</a>.",
+    "gui_settings_autoupdate_label": "Automatic updates",
+    "gui_settings_autoupdate_option": "Notify me when updates are available",
+    "gui_settings_autoupdate_timestamp": "Last checked: {}",
+    "gui_settings_autoupdate_timestamp_never": "Never",
+    "gui_settings_autoupdate_check_button": "Check For Updates",
     "gui_settings_sharing_label": "Sharing options",
     "gui_settings_close_after_first_download_option": "Stop sharing after first download",
     "gui_settings_connection_type_label": "How should OnionShare connect to Tor?",
