--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -74,6 +74,7 @@
     "gui_settings_connection_type_test_button": "Test Tor Settings",
     "gui_settings_control_port_label": "Control port",
     "gui_settings_socket_file_label": "Socket file",
+    "gui_settings_socks_label": "SOCKS port",
     "gui_settings_authenticate_label": "Tor authentication options",
     "gui_settings_authenticate_no_auth_option": "No authentication, or cookie authentication",
     "gui_settings_authenticate_password_option": "Password",
